# srclight-pro-max

./: .gitignore  CLAUDE.md  README.md  README.ru.md  pyproject.toml
docs/: playbook-claude-code-plugin.md  releasing.md  usage-guide.md
docs/labbook/: community-detection.md
docs/superpowers/plans/: 2026-04-06-community-detection.md  2026-04-16-srclight-final-stabilization.md  2026-04-16-srclight-v2-1-agent-ergonomics.md
docs/superpowers/specs/: 2026-04-06-community-detection-design.md  2026-04-16-srclight-final-stabilization-design.md  2026-04-16-srclight-v2-1-agent-ergonomics-design.md
scripts/: install.sh
src/srclight/: __init__.py  build.py  cli.py  community.py  db.py  embeddings.py  git.py  indexer.py  languages.py  learnings.py  output_shapes.py  server.py  task_context.py  web.py  workspace.py
src/srclight/extractors/: pdf_extractor.py
tests/: test_build.py  test_community.py  test_db.py  test_embedding_ux.py  test_embeddings.py  test_extractors.py  test_features.py  test_git.py  test_hooks.py  test_indexer.py  test_languages.py  test_learnings.py  test_new_tools.py  test_vector_cache.py  test_vector_math.py  test_workspace.py
