[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "srclight"
version = "0.20.0"
description = "Deep code indexing for AI agents. SQLite FTS5 + tree-sitter + embeddings + MCP."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Gig8 LLC" }]
keywords = ["mcp", "mcp-server", "code-indexing", "code-search", "code-intelligence", "sqlite", "fts5", "tree-sitter", "embeddings", "semantic-search", "ai", "claude", "ollama", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "mcp>=1.26.0",
    "click>=8.1.0",
    "rich>=13.9.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-c>=0.24.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-c-sharp>=0.23.0",
    "tree-sitter-markdown>=0.5.0",
    "tree-sitter-language-pack>=1.6.0",
    "tree-sitter-swift>=0.0.1",
    "tree-sitter-kotlin>=1.0.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-php>=0.24.0",
    "tree-sitter-bash>=0.25.0",
    "tree-sitter-cmake>=0.7.0",
    "tree-sitter-sql>=0.3.0",
    "tree-sitter-groovy>=0.1.0",
    "numpy>=1.26.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=13.0"]
docs = ["python-docx>=1.1", "openpyxl>=3.1", "beautifulsoup4>=4.12", "Pillow>=10.0"]
pdf = ["pdfplumber>=0.11"]
ocr = ["pytesseract>=0.3.13"]
paddleocr = ["paddleocr>=2.8", "pdf2image>=1.16"]
all = ["srclight[docs,pdf,ocr,paddleocr,gpu]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.9.0",
]

[project.scripts]
srclight = "srclight.cli:main"

[project.urls]
Homepage = "https://github.com/Matrix-aas/srclight-pro-max"
Repository = "https://github.com/Matrix-aas/srclight-pro-max"
Issues = "https://github.com/Matrix-aas/srclight-pro-max/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/srclight/build.py" = ["E501"]
"src/srclight/cli.py" = ["E501"]
"src/srclight/db.py" = ["E501"]
"src/srclight/embeddings.py" = ["E501"]
"src/srclight/extractors/html_extractor.py" = ["E501"]
"src/srclight/extractors/pdf_extractor.py" = ["E501"]
"src/srclight/indexer.py" = ["E501"]
"src/srclight/server.py" = ["E501"]
"src/srclight/web.py" = ["E501"]
"src/srclight/workspace.py" = ["E501"]
"tests/test_db.py" = ["E501"]
"tests/test_embedding_ux.py" = ["E501"]
"tests/test_features.py" = ["E501"]
"tests/test_indexer.py" = ["E501"]
"tests/test_new_tools.py" = ["E501"]
"tests/test_workspace.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/srclight"]

[tool.hatch.build.targets.sdist]
include = ["src/srclight", "README.md", "LICENSE"]
